--- a/index.html
+++ b/index.html
@@ -123,6 +123,17 @@
 										<li><a href=https://github.com/davidguchu123/power-bi-full-project class="button">New project</a></li>
 									</ul>
 								</article>
+									<article>
+									<header>
+										<h2><a href=https://github.com/davidguchu123/nashville-housing-power-bi-full-project/blob/main/nashville%20housing%20powerbi%20project.pbix>Nashville housing Power bi full project<br />
+										</a></h2>
+									</header>
+									<a href=https://github.com/davidguchu123/nashville-housing-power-bi-full-project/blob/main/nashville%20housing%20powerbi%20project.pbix class="image fit"><img src="images/Gray Black and White Modern Real Estate Property Facebook Post.png" alt="" /></a>
+									<p>In this project we will use powerbi to create beautiful visualizations on nashville housing data</p>
+									<ul class="actions special">
+										<li><a href=https://github.com/davidguchu123/nashville-housing-power-bi-full-project/blob/main/nashville%20housing%20powerbi%20project.pbix class="button">New project</a></li>
+									</ul>
+								</article>
 								<article>
 									<header>
 										<h2><a href=https://github.com/davidguchu123/layoffs-power-bi-project/blob/main/layoffs%20data%20visualization.pbix>power bi project on companies layoffs worldwide<br />
