--- a/index.html
+++ b/index.html
@@ -114,6 +114,17 @@
 								</article>
 								<article>
 									<header>
+										<h2><a href="https://public.tableau.com/app/profile/david.guchu/viz/Book1_17497394082680/salesDashboard"<br />
+										</a></h2>
+									</header>
+									<a href="https://public.tableau.com/app/profile/david.guchu/viz/Book1_17497394082680/salesDashboard class"="image fit"><img src="images/"Grey White Olive Green MInimalist Group Project Presentation.png" alt="" /></a>
+									<p>• Designed and developed interactive customer and sales dashboards in Tableau, enabling real-time insights across multiple companies and business units.</p>
+									<ul class="actions special">
+										<li><a href="https://public.tableau.com/app/profile/david.guchu/viz/Book1_17497394082680/salesDashboard" class="button">New project</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
 										<h2><a href=https://github.com/davidguchu123/power-bi-full-project/blob/main/power%20bi%20project.pbix>Power bi full project<br />
 										</a></h2>
 									</header>
