--- a/index.html
+++ b/index.html
@@ -81,15 +81,27 @@
 								</article>
 								<article>
 									<header>
-										<h2><a href=https://public.tableau.com/app/profile/david.guchu/viz/PORTFOLIOPROJECT_17483490800470/Dashboard1>Tableau project of covid19 data </a><br />
+										<h2><a href=https://public.tableau.com/app/profile/david.guchu/viz/PORTFOLIOPROJECT_17483490800470/Dashboard1>Tableau project of customers and sales dashboard </a><br />
 										</a></h2>
 									</header>
-									<a href=https://public.tableau.com/app/profile/david.guchu/viz/PORTFOLIOPROJECT_17483490800470/Dashboard1 class="image fit"><img src="images/New Covid-19 Mutant XE Variant  Instagram Post.png" alt="" /></a>
-									<p> In this project we wil use tableau to create visualizations based on covid19 data.</p>
+									<a href=https://public.tableau.com/app/profile/david.guchu/viz/PORTFOLIOPROJECT_17483490800470/Dashboard1 class="image fit"><img src="images/Grey White Olive Green MInimalist Group Project Presentation.png" alt="" /></a>
+									<p> • Designed and developed interactive customer and sales dashboards in Tableau, enabling real-time insights across multiple companies and business units.</p>
 									<ul class="actions special">
 										<li><a href=https://public.tableau.com/app/profile/david.guchu/viz/PORTFOLIOPROJECT_17483490800470/Dashboard1 class="button">new project</a></li>
 									</ul>
 								</article>
+								<article>
+									<header>
+										<h2><a href=https://public.tableau.com/app/profile/david.guchu/viz/britishairwaystableaufullproject/Dashboard1>Tableau project of british airways review data </a><br />
+										</a></h2>
+									</header>
+									<a href=https://public.tableau.com/app/profile/david.guchu/viz/britishairwaystableaufullproject/Dashboard1 class="image fit"><img src="images/Grey White Olive Green MInimalist Group Project Presentation (1).png" alt="" /></a>
+									<p>  Built a comprehensive Tableau dashboard analyzing British Airways customer reviews, focusing on sentiment trends, service quality, and flight experience metrics.</p>
+									<ul class="actions special">
+										<li><a href=https://public.tableau.com/app/profile/david.guchu/viz/britishairwaystableaufullproject/Dashboard1 class="button">new project</a></li>
+									</ul>
+								</article>
+								
 								<article>
 									<header>
 										<h2><a href=https://github.com/davidguchu123/Excel-complete-project-with-data_cleaning-pivot-tables-and-visualization/blob/main/Excel%20Project.xlsx>Excel data analysis project<br />
@@ -99,6 +111,17 @@
 									<p>In this project we will use excel to clean data,create pivot_tables,create visualizations.</p>
 									<ul class="actions special">
 										<li><a href=https://github.com/davidguchu123/Excel-complete-project-with-data_cleaning-pivot-tables-and-visualization/blob/main/Excel%20Project.xlsx class="button">New project</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<h2><a href=https://public.tableau.com/app/profile/david.guchu/viz/PORTFOLIOPROJECT_17483490800470/Dashboard1>Tableau project of covid19 data </a><br />
+										</a></h2>
+									</header>
+									<a href=https://public.tableau.com/app/profile/david.guchu/viz/PORTFOLIOPROJECT_17483490800470/Dashboard1 class="image fit"><img src="images/New Covid-19 Mutant XE Variant  Instagram Post.png" alt="" /></a>
+									<p> In this project we wil use tableau to create visualizations based on covid19 data.</p>
+									<ul class="actions special">
+										<li><a href=https://public.tableau.com/app/profile/david.guchu/viz/PORTFOLIOPROJECT_17483490800470/Dashboard1 class="button">new project</a></li>
 									</ul>
 								</article>
 								<article>
@@ -114,13 +137,13 @@
 								</article>
 								<article>
 									<header>
-										<h2><a href="https://public.tableau.com/app/profile/david.guchu/viz/Book1_17497394082680/salesDashboard"<br />
+										<h2><a href=https://github.com/davidguchu123/plant-company-powerbi-project/blob/main/Plant_DTS%20company%20project.pbix>power bi plant_company project visualizations </a><br />
 										</a></h2>
 									</header>
-									<a href="https://public.tableau.com/app/profile/david.guchu/viz/Book1_17497394082680/salesDashboard class"="image fit"><img src="images/"Grey White Olive Green MInimalist Group Project Presentation.png" alt="" /></a>
-									<p>• Designed and developed interactive customer and sales dashboards in Tableau, enabling real-time insights across multiple companies and business units.</p>
+									<a href=https://github.com/davidguchu123/plant-company-powerbi-project/blob/main/Plant_DTS%20company%20project.pbix class="image fit"><img src="images/Green Black Minimalist Content Engagement Analysis Report .png" alt="" /></a>
+									<p>• Developed an end-to-end Power BI dashboard for Plant Co, visualizing operational efficiency, production output, and resource utilization across multiple facilities.</p>
 									<ul class="actions special">
-										<li><a href="https://public.tableau.com/app/profile/david.guchu/viz/Book1_17497394082680/salesDashboard" class="button">New project</a></li>
+										<li><a href=https://github.com/davidguchu123/plant-company-powerbi-project/blob/main/Plant_DTS%20company%20project.pbix class="button">new project</a></li>
 									</ul>
 								</article>
 								<article>
