--- a/index.html
+++ b/index.html
@@ -81,6 +81,18 @@
 								</article>
 								<article>
 									<header>
+									
+										<h2><a href=https://public.tableau.com/app/profile/david.guchu/viz/kenyaunemploymentdataresearch/Dashboard1?publish=yes>unemployment in kenya  data<br />
+										</a></h2>
+									</header>
+									<a href=https://public.tableau.com/app/profile/david.guchu/viz/kenyaunemploymentdataresearch/Dashboard1?publish=yes class="image fit"><img src="images/unemployment.png" alt="" /></a>
+									<p> "Using Tableau, I created an interactive dashboard that highlights key insights — like which regions face the highest joblessness, where income levels are falling, and which sectors are most affected."</p>
+									<ul class="actions special">
+										<li><a href=https://public.tableau.com/app/profile/david.guchu/viz/kenyaunemploymentdataresearch/Dashboard1?publish=yes class="button">view project</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
 										<h2><a href=https://public.tableau.com/app/profile/david.guchu/viz/PORTFOLIOPROJECT_17483490800470/Dashboard1>Tableau project of customers and sales dashboard </a><br />
 										</a></h2>
 									</header>
