--- a/index.html
+++ b/index.html
@@ -127,6 +127,17 @@
 								</article>
 								<article>
 									<header>
+										<h2><a href=https://github.com/davidguchu123/call-centre-excel-data-analysis/blob/main/sample-data-excel-portfolio-project.xlsx>call centre excel data portfolio project</a><br />
+										</a></h2>
+									</header>
+									<a href=https://github.com/davidguchu123/call-centre-excel-data-analysis/blob/main/sample-data-excel-portfolio-project.xlsx class="image fit"><img src="images/excel.png.png" alt="" /></a>
+									<p> In this project we wil use excel to clean and create visualization and pivot tables.</p>
+									<ul class="actions special">
+										<li><a href=https://github.com/davidguchu123/call-centre-excel-data-analysis/blob/main/sample-data-excel-portfolio-project.xlsx class="button">new project</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
 										<h2><a href=https://public.tableau.com/app/profile/david.guchu/viz/PORTFOLIOPROJECT_17483490800470/Dashboard1>Tableau project of covid19 data </a><br />
 										</a></h2>
 									</header>
