--- a/index.html
+++ b/index.html
@@ -126,6 +126,30 @@
 									</ul>
 								</article>
 								<article>
+				
+									<header>
+									
+										<h2><a href=https://public.tableau.com/app/profile/david.guchu/viz/CBKFinancialInsights2025/CBKFinancialInsights2025>CBKFinancialInsights2025</a><br />
+										</a></h2>
+									</header>
+									<a href=https://public.tableau.com/app/profile/david.guchu/viz/CBKFinancialInsights2025/CBKFinancialInsights2025 class="image fit"><img src="images/CBK Financial Insights 2025.png" alt="" /></a>
+									<p> In this project we will analyze cbk financial year 2025 using tableau/p>
+									<ul class="actions special">
+										<li><a href=https://public.tableau.com/app/profile/david.guchu/viz/CBKFinancialInsights2025/CBKFinancialInsights2025 class="button">view project</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<h2><a href=https://public.tableau.com/app/profile/david.guchu/viz/spotifystreamsanalysis/spotifyvisualization>spotify data visualization project</a><br />
+										</a></h2>
+									</header>
+									<a href=https://public.tableau.com/app/profile/david.guchu/viz/spotifystreamsanalysis/spotifyvisualization class="image fit"><img src="images/spotify visualization (1).png" alt="" /></a>
+									<p> In this project we wil analyze streams and playlists of spotify using tableau.</p>
+									<ul class="actions special">
+										<li><a href=https://public.tableau.com/app/profile/david.guchu/viz/spotifystreamsanalysis/spotifyvisualization class="button">new project</a></li>
+									</ul>
+								</article>
+								<article>
 									<header>
 										<h2><a href=https://github.com/davidguchu123/call-centre-excel-data-analysis/blob/main/sample-data-excel-portfolio-project.xlsx>call centre excel data portfolio project</a><br />
 										</a></h2>
@@ -149,10 +173,32 @@
 								</article>
 								<article>
 									<header>
+										<h2><a href=https://public.tableau.com/app/profile/david.guchu/viz/KenyaHealthSectorReport2025/KenyaHealthSectorReport2025>KENYA HEALTH SECTOR 2025</a><br />
+										</a></h2>
+									</header>
+									<a href=https://public.tableau.com/app/profile/david.guchu/viz/KenyaHealthSectorReport2025/KenyaHealthSectorReport2025 class="image fit"><img src="images/Kenya Health Sector Report 2025.png" alt="" /></a>
+									<p> In this project we wil use tableau to analyze the health sector of kenya and previous year trend.</p>
+									<ul class="actions special">
+										<li><a href=https://public.tableau.com/app/profile/david.guchu/viz/KenyaHealthSectorReport2025/KenyaHealthSectorReport2025 class="button">new project</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<h2><a href=https://public.tableau.com/app/profile/david.guchu/viz/netflixdata_17525159377490/netflixdashboard >NETFLIX DATA ANALYSIS </a><br />
+										</a></h2>
+									</header>
+									<a href=https://public.tableau.com/app/profile/david.guchu/viz/netflixdata_17525159377490/netflixdashboard class="image fit"><img src="images/Kenya Health Sector Report 2025.png" alt="" /></a>
+									<p> In this project we wil use tableau to analyze netflix data in detail.</p>
+									<ul class="actions special">
+										<li><a href=https://public.tableau.com/app/profile/david.guchu/viz/netflixdata_17525159377490/netflixdashboard class="button">new project</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
 										<h2><a href=https://github.com/davidguchu123/excel-data-cleaning/blob/main/Data%20Cleaning%20Excel.xlsx>Excel data cleaning project<br />
 										</a></h2>
 									</header>
-									<a href=https://github.com/davidguchu123/excel-data-cleaning/blob/main/Data%20Cleaning%20Excel.xlsx class="image fit"><img src="images/Deal Pipeline Tracker.png" alt="" /></a>
+									<a href=https://github.com/davidguchu123/excel-data-cleaning/blob/main/Data%20Cleaning%20Excel.xlsx class="image fit"><img src="images/netflix dashboard (1).png" alt="" /></a>
 									<p>In this project we will use excel to clean data.</p>
 									<ul class="actions special">
 										<li><a href=https://github.com/davidguchu123/excel-data-cleaning/blob/main/Data%20Cleaning%20Excel.xlsx class="button">New project</a></li>
