--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 										<h2><a href=https://public.tableau.com/app/profile/david.guchu/viz/netflixdata_17525159377490/netflixdashboard >NETFLIX DATA ANALYSIS </a><br />
 										</a></h2>
 									</header>
-									<a href=https://public.tableau.com/app/profile/david.guchu/viz/netflixdata_17525159377490/netflixdashboard class="image fit"><img src="images/Kenya Health Sector Report 2025.png" alt="" /></a>
+									<a href=https://public.tableau.com/app/profile/david.guchu/viz/netflixdata_17525159377490/netflixdashboard class="image fit"><img src="images/netflix dashboard (1).png" alt="" /></a>
 									<p> In this project we wil use tableau to analyze netflix data in detail.</p>
 									<ul class="actions special">
 										<li><a href=https://public.tableau.com/app/profile/david.guchu/viz/netflixdata_17525159377490/netflixdashboard class="button">new project</a></li>
@@ -198,7 +198,7 @@
 										<h2><a href=https://github.com/davidguchu123/excel-data-cleaning/blob/main/Data%20Cleaning%20Excel.xlsx>Excel data cleaning project<br />
 										</a></h2>
 									</header>
-									<a href=https://github.com/davidguchu123/excel-data-cleaning/blob/main/Data%20Cleaning%20Excel.xlsx class="image fit"><img src="images/netflix dashboard (1).png" alt="" /></a>
+									<a href=https://github.com/davidguchu123/excel-data-cleaning/blob/main/Data%20Cleaning%20Excel.xlsx class="image fit"><img src="images/excel.png" alt="" /></a>
 									<p>In this project we will use excel to clean data.</p>
 									<ul class="actions special">
 										<li><a href=https://github.com/davidguchu123/excel-data-cleaning/blob/main/Data%20Cleaning%20Excel.xlsx class="button">New project</a></li>
